MDEXP-621 Fixed sonar, added tests